other-vpol/restrict-service-port-range/.kyverno-test/resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: bad-service
spec:
  type: NodePort
  selector:
    app: MyApp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
---
apiVersion: v1
kind: Service
metadata:
  name: good-service
spec:
  type: NodePort
  selector:
    app: MyApp
  ports:
    - port: 32000
      targetPort: 80
      nodePort: 32000
---
apiVersion: v1
kind: Service
metadata:
  name: approved-service
spec:
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mixed-service
spec:
  ports:
  - port: 80
  - port: 90
