other-vpol/restrict-service-port-range/restrict-service-port-range.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-service-port-range
  annotations:
    policies.kyverno.io/title: Restrict Service Port Range in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol 
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Service
    policies.kyverno.io/description: >-
      Services which are allowed to expose any port number may be able
      to impact other applications running on the Node which require them,
      or may make specifying security policy externally more challenging.
      This policy enforces that only the port range 32000 to 33000 may
      be used for Service resources.
spec:
  validationActions: 
    - Audit
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["services"]
  validations:
    - expression: "object.spec.ports.all(p, (p.port >= 32000 && p.port <= 33000) || string(p.port) in exceptions.allowedValues.orValue([]))"
      message: Ports must be between 32000-33000
